Вытеснение кэша экстремумов вынесено в репозиторий
Недостающий кусок вырезался счётом от первой свечи - то же допущение о
непрерывности индексов, что чинилось в агрегаторе кластеров. Здесь средний
шаг не годится: границы решают, какие свечи уйдут в базовый локатор, а не
какую окрестность мерить, поэтому бинарный поиск по индексу.

Сколько прошлого хранить - вопрос не локатора, и отвечал он на него
наполовину: подрезал окно, которого касался сейчас, а второй инструмент
или дальний участок висели вечно. LimitedExtremeRangeRepository отвечает
за всё закэшированное, потому что видит всё закэшированное. Сначала
выбрасываются целые диапазоны по давности обращения, потом подрезается
тот, что сам перерос бюджет: локатор сращивает каждое окно с соседями, так
что проход по году оставляет один растущий диапазон, который никогда не
остынет. Режется дальний от последнего запроса конец.

Экстремумы под выброшенным участком удаляются, INNER-диапазоны режутся по
выжившей части: такой диапазон утверждает, что участок просканирован, и
оставленный над пустотой заставил бы локатор пропустить работу и вернуть
меньше экстремумов, чем есть.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>